Adds fixes for Java10 which deprecates Class.newInstance