@@ -53,7 +53,7 @@ public class AmountProperty extends Property implements SQLPropertyInfo {
                            Consumer<Property> propertyConsumer) {
             AmountProperty amountProperty = new AmountProperty(descriptor, accessPath, field);
             try {
-                if (field.get(descriptor.getType().newInstance()) == null) {
+                if (field.get(descriptor.getType().getDeclaredConstructor().newInstance()) == null) {
                     Mixing.LOG.WARN("Field %s in %s is an Amount. Such fields should be initialized with Amount.NOTHING"
                                     + " as an amount should never be null!",
                                     field.getName(),
